# Kyoku-s-Basic-Bot

./: .env  .gitignore  README.md  Tests.py  bot.py  pyproject.toml  start.py
Core/: Permission.py  Pokercards.py
Utils/: Config.py  EnvGenerator.py  Logger.py
plugins/Basic/Permission/: __init__.py
plugins/Kyoku/Dices/: __init__.py
plugins/Kyoku/Poker/: __init__.py
